1. Started to separate JS/CSS from HTML. 2. Started to add Yandex metrics.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html lang="en">
   <head>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
     <script>
     //var googleTab; // tab with openned Google page
     var popupButton = null;
