--- a/background.html
+++ b/background.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
     <head>
-        <script type="text/javascript" src="common.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript">
             function onRequest(request, sender, sendResponse) {
                 if (sender.tab) {
