--- a/options.html
+++ b/options.html
@@ -4,9 +4,24 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="options.css">
     <title>CGM options</title>
-    <script src="options.js" type="text/javascript"></script>
+    <script src="js/options.js" type="text/javascript"></script>
+    <!--<script src="js/watch.js" type="text/javascript"></script>-->
 </head>
 <body>
+    <!-- Yandex.Metrika counter -->
+    <div style="display:none;"><script type="text/javascript">
+    (function(w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter10577218 = new Ya.Metrika({id:10577218, enableAll: true, trackHash:true});
+            }
+            catch(e) { }
+        });
+    })(window, "yandex_metrika_callbacks");
+    </script></div>
+    <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+    <!-- /Yandex.Metrika counter -->
+    
     <header>
         <img src="icons/cgm64.png">
         <h1 id="widget-name">CGM v1.1</h1>
