--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <title>CGM</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-
-    <script src="js/common.js" type="text/javascript"></script>
-    <script src="js/popup.js" type="text/javascript"></script>
-
+    <title>CGM</title>
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/redmond/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/popup.css" />
   </head>
   <body>
+    <div class="demo">
+        <p id="donations">If you like this extension, please, consider a donation. It will encourage me for further development.</p>
+        <div id="paypal" class="donation_blocks">
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" name="paypal" target="_blank">
+                <input type="hidden" name="cmd" value="_s-xclick" />
+                <input type="hidden" name="hosted_button_id" value="4EVHZDWEYQZLN" />
+                <input class="paypalButton" type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" name="submit" alt="PayPal — The safer, easier way to pay online." onclick="trackButton('paypal'); return true;"/>
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+            </form>
+        </div>
+        <div id="yandex" class="donation_blocks">
+            <form name="yand" style="margin: 0; padding: 0 0 2px;" action="https://money.yandex.ru/donate.xml" method="post" target="_blank">
+                <input type="hidden" name="to" value="410011106982479" />
+                <input type="hidden" name="s5" value="1rub" />
+                <input type="submit" value="Yandex.Money" onclick="trackButton('yandex'); return true;"/>
+            </form>
+        </div>
+        <div id="flattr" class="donation_blocks">
+            <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/fralik/cgm"></a>
+        </div>
+    </div>
+    <p id="informer"></p>
+    <div class="demo" id="list_area">
+        <p id="popup_usage_description">Drag items from one list to another. Press <a class="action save" href="#">Save</a> when you are done. Press <a href="#" class="action reset">Reset</a> to restore original Google™ menu.</p>
+    <div class="ui-widget-content"><p id="visible_list_text">Visible list:</p>
+        <ul id="visible" class="connectedSortable"> </ul>
+    </div>
+
+    <div class="ui-widget-content"><p id="hidden_list_text">Hidden list:</p>
+        <ul id="hidden" class="connectedSortable"> </ul>
+    </div>
+
+    <div class="ui-widget-content"><a href="#" class="action save">Save</a></div>
+    </div>
+    
     <!-- Yandex.Metrika counter -->
     <div style="display:none;"><script type="text/javascript">
     (function(w, c) {
@@ -26,41 +54,12 @@
         });
     })(window, "yandex_metrika_callbacks");
     </script></div>
-    <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
-    <noscript><div><img src="//mc.yandex.ru/watch/10577218" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
-    
-    <div class="demo">
-        <p id="donation_text">If you like this extension, please, consider a donation. It will encourage me for further development.
-            <div id="paypal">
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" name="paypal" target="_blank">
-                    <input type="hidden" name="cmd" value="_s-xclick" />
-                    <input type="hidden" name="hosted_button_id" value="4EVHZDWEYQZLN" />
-                    <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online." onclick="trackButton('paypal'); return true;"/>
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-                </form>
-            </div>
-            <div id="yandex">
-                <form name="yand" style="margin: 0; padding: 0 0 2px;" action="https://money.yandex.ru/donate.xml" method="post" target="_blank">
-                    <input type="hidden" name="to" value="410011106982479" />
-                    <input type="hidden" name="s5" value="1rub" />
-                    <input type="submit" value="Yandex.Money" onclick="trackButton('yandex'); return true;"/>
-                </form>
-            </div>
-        </p>
-    </div>
-    <p id="informer"></p>
-    <div class="demo">
-        <p id="popup_usage_description">Drag items from one list to another. Press <a class="action save" href="#">Save</a> when you are done. Press <a href="#" class="action reset">Reset</a> to restore original Google&#0153; menu.</p>
-    <div class="ui-widget-content"><p id="visible_list_text">Visible list:</p>
-        <ul id="visible" class="connectedSortable"></ul>
-    </div>
+    <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+    <!-- /Yandex.Metrika counter -->    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
 
-    <div class="ui-widget-content"><p id="hidden_list_text">Hidden list:</p>
-        <ul id="hidden" class="connectedSortable"></ul>
-    </div>
-
-    <div class="ui-widget-content"><a href="#" class="action save">Save</a></div>
-    </div>
+    <script src="js/common.js" type="text/javascript"></script>
+    <script src="js/popup.js" type="text/javascript"></script>
   </body>
 </html>
