--- a/popup.html
+++ b/popup.html
@@ -8,29 +8,8 @@
     <link rel="stylesheet" href="css/popup.css" />
   </head>
   <body>
-    <div class="demo">
-        <p id="donations">If you like this extension, please, consider a donation. It will encourage me for further development.</p>
-        <div id="paypal" class="donation_blocks">
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" name="paypal" target="_blank">
-                <input type="hidden" name="cmd" value="_s-xclick" />
-                <input type="hidden" name="hosted_button_id" value="4EVHZDWEYQZLN" />
-                <input class="paypalButton" type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" name="submit" alt="PayPal — The safer, easier way to pay online." onclick="trackButton('paypal'); return true;"/>
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-            </form>
-        </div>
-        <div id="yandex" class="donation_blocks">
-            <form name="yand" style="margin: 0; padding: 0 0 2px;" action="https://money.yandex.ru/donate.xml" method="post" target="_blank">
-                <input type="hidden" name="to" value="410011106982479" />
-                <input type="hidden" name="s5" value="1rub" />
-                <input type="submit" value="Yandex.Money" onclick="trackButton('yandex'); return true;"/>
-            </form>
-        </div>
-        <div id="flattr" class="donation_blocks">
-            <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/fralik/cgm"></a>
-        </div>
-    </div>
     <p id="informer"></p>
-    <div class="demo" id="list_area">
+    <div class="demo" id="list_area" style="visibility:hidden">
         <p id="popup_usage_description">Drag items from one list to another. Press <a class="action save" href="#">Save</a> when you are done. Press <a href="#" class="action reset">Reset</a> to restore original Google™ menu.</p>
     <div class="ui-widget-content"><p id="visible_list_text">Visible list:</p>
         <ul id="visible" class="connectedSortable"> </ul>
@@ -43,23 +22,14 @@
     <div class="ui-widget-content"><a href="#" class="action save">Save</a></div>
     </div>
     
-    <!-- Yandex.Metrika counter -->
-    <div style="display:none;"><script type="text/javascript">
-    (function(w, c) {
-        (w[c] = w[c] || []).push(function() {
-            try {
-                w.yaCounter10577218 = new Ya.Metrika({id:10577218, enableAll: true, trackHash:true});
-            }
-            catch(e) { }
-        });
-    })(window, "yandex_metrika_callbacks");
-    </script></div>
-    <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
-    <!-- /Yandex.Metrika counter -->    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
 
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/popup.js" type="text/javascript"></script>
+
+    <!-- Yandex.Metrika counter -->
+    <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+    <!-- /Yandex.Metrika counter -->    
   </body>
 </html>
