Opera: Added timeout so that links arrive to popup after popup has been initialized.

--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="icons/cgm64.png" alt="App icon">
-        <h1 id="widget-name">CGM v1.1</h1>
+        <h1 id="widget-name">CGM v1.3-1</h1>
         <h2>Made by <span id="widget-author">Vadim Frolov</span></h2>
     </header>
     <section>
