--- a/popup.html
+++ b/popup.html
@@ -11,15 +11,15 @@
     <p id="informer"></p>
     <div class="demo" id="list_area" style="visibility:hidden">
         <p id="popup_usage_description">Drag items from one list to another. Press <a class="action save" href="#">Save</a> when you are done. Press <a href="#" class="action reset">Reset</a> to restore original Google™ menu.</p>
-    <div class="ui-widget-content"><p id="visible_list_text">Visible list:</p>
-        <ul id="visible" class="connectedSortable"> </ul>
-    </div>
+        <div class="ui-widget-content"><p id="visible_list_text">Visible list:</p>
+            <ul id="visible" class="connectedSortable"> </ul>
+        </div>
 
-    <div class="ui-widget-content"><p id="hidden_list_text">Hidden list:</p>
-        <ul id="hidden" class="connectedSortable"> </ul>
-    </div>
+        <div class="ui-widget-content"><p id="hidden_list_text">Hidden list:</p>
+            <ul id="hidden" class="connectedSortable"> </ul>
+        </div>
 
-    <div class="ui-widget-content"><a href="#" class="action save">Save</a></div>
+        <div class="ui-widget-content-button"><a href="#" class="action save">Save</a></div>
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
