Opera: Popup appearance
* Content of the popup becomes invisible only if we are not on Google page.
* Removed delay for sending links from the injected script.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 tab.postMessage({action: cgmMessages.PORT_REQUEST}, [event.source] );
                 //opera.postError('CGM, background, forward port request to injected');
             } else {
+                event.source.postMessage({action: cgmMessages.WRONG_URL_MSG});
                 //opera.postError('CGM, background, no active tab');
             }
         }
